# rcpp

pkg/: DESCRIPTION  INDEX  NAMESPACE  NEWS  TODO  cleanup  configure  configure.in  configure.win
pkg/Irwls/: DESCRIPTION  NAMESPACE
pkg/Irwls/R/: zzz.R
pkg/Irwls/man/: Irwls-package.Rd  mIrwls-module.Rd
pkg/Irwls/src/: irwls.cpp  irwls.h
pkg/Irwls/tests/: trivial.R
pkg/R/: Rcpp.package.skeleton.R  RcppExample.R  RcppInline.R  RcppLdpath.R  RcppTemplateVersion.R  RcppVersion.R  cpp.package.skeleton.R  exceptions.R  unit.tests.R  zzz.R
pkg/Rcpp/: ChangeLog
pkg/Rcpp/inst/: NEWS.Rd
pkg/RcppCImg/: DESCRIPTION  NAMESPACE
pkg/RcppCImg/R/: rcpp_hello_world.R
pkg/RcppCImg/man/: RcppCImg-package.Rd
pkg/RcppCImg/src/: Makevars  RcppCImg.cpp
pkg/RcppCImg/src-i386/: Makevars  Makevars.win
pkg/RcppClassicExamples/: ChangeLog  DESCRIPTION  NAMESPACE
pkg/RcppGsl/: DESCRIPTION  NAMESPACE
pkg/RcppGsl/R/: unit.test.R  zzz.R
pkg/RcppGsl/man/: RcppGsl-package.Rd
pkg/RcppGsl/src/: Makevars  Makevars.win  RcppGsl.cpp
pkg/RcppModels/: ChangeLog  DESCRIPTION  NAMESPACE
pkg/RcppModels/R/: fastGlm.R  zzz.R
pkg/RcppModels/man/: RccpModels-package.Rd
pkg/RcppModels/src/: Makevars  Module.cpp  RcppModels.cpp  RcppModels.h  glmFamily.cpp  glmFamily.h
pkg/RcppModels/tests/: doRUnit.R  pois.R
pkg/RcppParDE/: ChangeLog  DESCRIPTION  NAMESPACE
pkg/RcppParDE/R/: DEoptim.R  zzz.R
pkg/RcppParDE/man/: DEoptim-methods.Rd  DEoptim.Rd
pkg/RcppParDE/scripts/: openmp.r
pkg/RcppParDE/src/: Makevars  devol.cpp  permute.cpp
pkg/RcppSrc/: Rcpp-license.txt  Rcpp.cpp  Rcpp.hpp
pkg/base64/: DESCRIPTION  NAMESPACE
pkg/base64/R/: base64.R
pkg/base64/man/: base64-package.Rd  decode.Rd  encode.Rd  img.Rd
pkg/base64/src/: base64.c
pkg/contributedPatches/: Yan.Zhou.c++11.2012-12-03.patch
pkg/debian/: changelog  control  r-cran-rcpp.lintian-overrides
pkg/demo/: 00Index  ReadRcppAPI.R  SincSurface.R  SineCurve.R
pkg/inst/: ChangeLog  LICENSE-Rcpp.txt  THANKS
pkg/inst/discovery/: README  cxx0x.R  cxx0x.c
pkg/inst/doc/: MakeWinBin.bat  Makefile  Rcpp-license.txt  Rcpp-unitTests.R  Rcpp-unitTests.Rnw  Rcpp-unitTests.html  Rcpp-unitTests.txt  RcppAPI.Rnw  index.html  rcpp.index.html
pkg/inst/skeleton/: Makevars
pkg/inst/unitTests/: runTests.R  runit.CharacterVector.R  runit.ExpressionVector.R  runit.Function.R  (+16 more)
pkg/man/: Rcpp-package.Rd  RcppDate.Rd  RcppDemo.Rd  RcppExample.Rd  RcppInline.Rd  RcppResultSet.Rd  RcppTemplateDemo.Rd  RcppTemplateVersion.Rd  RcppUnitTests.Rd  RcppVersion.Rd  cpp.package.skeleton.Rd
pkg/patches/: DESCRIPTION  NAMESPACE
pkg/playground/: RandomPromise.h  cxxmodule.R  plus.h  random.h  rnorm.h
pkg/src/: CharacterVector.cpp  ComplexVector.cpp  Dimension.cpp  DottedPair.cpp  Environment.cpp  Evaluator.cpp  ExpressionVector.cpp  Function.cpp  GenericVector.cpp  IntegerVector.cpp  Language.cpp  LogicalVector.cpp  Makefile  Makefile.win  Makevars  Makevars.win  NumericVector.cpp  Pairlist.cpp  Promise.cpp  RObject.cpp  RawVector.cpp  Rcpp.cpp  Rcpp.h  RcppCommon.cpp  RcppCommon.h  RcppDate.cpp  RcppDate.h  RcppDateVector.cpp  RcppDateVector.h  RcppDatetime.cpp  RcppDatetime.h  RcppDatetimeVector.cpp  RcppDatetimeVector.h  RcppDoxygenExamples.h  RcppExample.cpp  RcppFrame.cpp  RcppFrame.h  RcppFunction.cpp  RcppFunction.h  RcppMatrix.cpp  (+34 more)
pkg/tests/: doRUnit.R
pkg/wls/: DESCRIPTION  NAMESPACE
(+210 files in other folders)
