AC_PREREQ(2.50) dnl require version 2.5+ of autoconf

AC_INIT([Rcpp], 6.0) dnl package name, version

# the CC and CFLAGS variables control configure tests, and they need to
# be the same as what will be used when the package is built. There is
# no need to place these flags in Makevars, and if no configure tests are
# done they are not needed here (see "Writing R Extensions" manual).
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
    echo "Could not determine R home directory"
    exit 1
fi
CXX=`"${R_HOME}/bin/R" CMD config CXX`
CXXFLAGS=`"${R_HOME}/bin/R" CMD config CXXFLAGS`

AC_LANG(C++) # using C++

AC_REQUIRE_CPP

# configure include/load flags and copy sample source to inst/doc
AC_SUBST([CPPFLAGS],["${CPPFLAGS} -I../RcppSrc"])
AC_SUBST([LDFLAGS],["${LDFLAGS} -L../RcppSrc -lRcpp"])
# echo "Building libRcpp.a in RcppSrc..."
# cd RcppSrc
# make RHOME=${R_HOME}
# cd ..
# if test \! -d inst
# then
#     mkdir inst
# fi
# cp RcppSrc/LICENSE-Rcpp.txt inst

AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
dnl AC_OUTPUT(src/Makevars)
