## -*- mode: autoconf++; autoconf-indentation: 4; -*-
##
## configure.in: R/C++ interface class library -- autoconf support
##
## Copyright (C) 2010  Dirk Eddelbuettel and Romain Francois
##
## This file is part of Rcpp.
##
## Rcpp is free software: you can redistribute it and/or modify it
## under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 2 of the License, or
## (at your option) any later version.
##
## Rcpp is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.

## This files owes a lot to other configure.in script cobbled together 
## over the years. Parts of the logic used here were contributed by
## Kurt Hornik for the RQuantLib package and its compiler and library 
## detection

## require at least autoconf 2.50
AC_PREREQ(2.50)

## Process this file with autoconf to produce a configure script.
AC_INIT(Rcpp, 0.7.1.1)

## We are using C++
AC_LANG(C++)
AC_REQUIRE_CPP


## Basic check for R itself
AC_DEFUN(AC_PROG_R, [AC_CHECK_PROG(R,R,yes)])
AC_PROG_R

## look for Rscript, but use the one found via R_HOME to allow for multiple installations
AC_DEFUN(AC_PROG_RSCRIPT, [AC_CHECK_PROG(RSCRIPT,Rscript,yes)])
AC_PROG_RSCRIPT
if test x"${RSCRIPT}" == x"yes" ; then
     hasRscript=true
else
    echo "
  Your installation does not appear to have Rscript installed.

  Please make sure that you have a working and complete R installation.
"
    exit 1
fi

## Next segment by Kurt
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
   AC_MSG_ERROR([Could not determine R_HOME.])		
fi

## find out if we can safely add -std=c++0x
## other packages would call Rcpp:::Cxx0xFlags() instead
## but we cannot because configure happens too soon
cxx0x_flags=`Rscript inst/discovery/cxx0x.R`

## now use cxx_flags
AC_SUBST([CXX0XFLAGS],["$cxx0x_flags"])
AC_OUTPUT(src/Makevars)
AC_MSG_NOTICE([Completed configuration and ready to build.])



